fixes flickery tooltip, disables text selection on non-text ui elements

--- a/nakar-client-web/src/index.css
+++ b/nakar-client-web/src/index.css
@@ -2,13 +2,20 @@ html, body, div#root {
     height: 100%
 }
 
-svg {
+/* Prevent SVG elements to show text cursor */
+* {
     user-select: none;
 }
 
+/* Workaround for tabs sizes */
 .tab-content {
     flex-grow: 1;
     height: 100%;
     width: 100%;
     overflow: auto;
+}
+
+/* Workaround for https://github.com/react-bootstrap/react-bootstrap/issues/3393#issuecomment-1375715749 */
+div[role=tooltip] {
+    position: fixed;
 }
